--- a/emiller_PA446_midterm_p2.rmd
+++ b/emiller_PA446_midterm_p2.rmd
@@ -7,6 +7,16 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+install.packages("vitae")
+library(vitae)
+
+remotes::install_github('mitchelloharawild/icons@v0.1.0')
+devtools::install_github("nstrayer/datadrivencv")
 ```
 
 # Resume
+```{r}
+?datadrivencv::use_datadriven_cv
+```
+
