--- a/emiller_PA446_midterm_p1.qmd
+++ b/emiller_PA446_midterm_p1.qmd
@@ -119,19 +119,23 @@ html <- read_html(url)
 
 
 title <- html |>
-  html_elements(".css-8hzhxf") |> html_text2() # title
+  html_elements(".css-8hzhxf") |> 
+  html_text2() # title
 
 descrip <- html |>
-  html_element(".css-1pga48a.e15t083i1") |> html_text2() # description
+  html_element("p.css-1pga48a.e15t083i1") |> 
+  html_text2()# description
+
+descrip <- html %>%
+  html_elements(".css-1pga48a.e15t083i1") %>%
+  html_text2()
 
 authorname <- html |>
-  html_elements(".css-1n7hynb") |> html_text2() # author name
+  html_elements(".css-1n7hynb") |> 
+  html_text2() # author name
 
 # Build the tibble
-
-```
-
-```{}
+nyttable <- tibble(title, authorname, descrip)
 ```
 
 # Part II
