--- a/docs/index.rmd
+++ b/docs/index.rmd
@@ -4,7 +4,7 @@ author: "Elizabeth Miller"
 date: "`r Sys.Date()`"
 output: 
   html_document:
-    theme: journal
+    theme: cosmo
 ---
 
 ```{r setup, include=FALSE}
