--- a/docs/index.rmd
+++ b/docs/index.rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Resume'
 author: "Elizabeth Miller"
-date: "`r Sys.Date()`"
+date: "2024"
 output: 
   html_document:
     theme: cosmo
