another final commit

--- a/emiller_PA446_midterm_p1.qmd
+++ b/emiller_PA446_midterm_p1.qmd
@@ -184,6 +184,8 @@ as_tibble(nyttable)
 
 # Part II
 
+## Question 4
+
 Link to webpage with CV: <https://emiller1031.github.io/midterm_pa446/>
 
 Link to GitHub repo for midterm: <https://github.com/emiller1031/midterm_pa446>
